tests/test_enum/bad/ambiguous_cases.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1

declaration enumeration F:
  -- Case1

declaration scope A:
  context e content E

scope A:
  definition e equals Case1
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
